Build retained Vulkan rewrite foundations