@@ -1,11 +1,10 @@
 package dev.comfyfluffy.caustica.client.settings;
 
 import dev.comfyfluffy.caustica.CausticaOptions;
-import dev.comfyfluffy.caustica.api.CausticaRegistry;
-import dev.comfyfluffy.caustica.api.Feature;
-import dev.comfyfluffy.caustica.api.Option;
-import dev.comfyfluffy.caustica.builtin.BloomPass;
-import dev.comfyfluffy.caustica.api.ResourceId;
+import dev.comfyfluffy.caustica.settings.FeatureSettings;
+import dev.comfyfluffy.caustica.settings.Option;
+import dev.comfyfluffy.caustica.settings.ResourceId;
+import dev.comfyfluffy.caustica.settings.SettingsRegistry;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
@@ -19,16 +18,24 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 final class CausticaSectionsTest {
-    // BuiltinExtension is package-private, and widening it for a test would be the wrong trade.
     private static final ResourceId BUILTIN = ResourceId.of("caustica", "builtin");
-    private static final ResourceId MINECRAFT = ResourceId.of("caustica", "minecraft");
     private static final ResourceId PROVIDER_ONLY = ResourceId.of("test", "provider_only");
+    private static final Option<Boolean> ENABLED = Option.bool("effect.enabled", true).asGroupHeader("effect");
+    private static final Option<Float> STRENGTH = Option.range("effect.strength", 0.5f, 0.0f, 2.0f)
+            .inGroup("effect");
 
     @TempDir
     Path configDir;
 
-    private CausticaOptions options(CausticaRegistry registry) {
-        return CausticaOptions.load(configDir.resolve("caustica-options.toml"), registry.features());
+    private CausticaOptions options(SettingsRegistry registry) {
+        return CausticaOptions.load(configDir.resolve("caustica-options.toml"), registry);
+    }
+
+    private static SettingsRegistry registry() {
+        SettingsRegistry registry = new SettingsRegistry();
+        registry.feature(BUILTIN).group("effect").options(List.of(ENABLED, STRENGTH)).register();
+        registry.feature(PROVIDER_ONLY).register();
+        return registry;
     }
 
     private static SettingsSection sectionOf(List<SettingsSection> sections, String id) {
@@ -40,23 +47,17 @@ final class CausticaSectionsTest {
     }
 
     @Test
-    void everyRegisteredFeatureWithOptionsBecomesItsOwnSection() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-
+    void everySettingsFeatureWithOptionsBecomesItsOwnSection() {
+        SettingsRegistry registry = registry();
         List<SettingsSection> sections = CausticaSections.build(registry, options(registry));
 
-        assertEquals("engine", sections.get(0).id());
-        assertEquals("composition", sections.get(1).id());
+        assertEquals("engine", sections.getFirst().id());
         assertNotNull(sectionOf(sections, BUILTIN.toString()));
-        assertNotNull(sectionOf(sections, MINECRAFT.toString()));
     }
 
-    /** A scene-provider-only extension has nothing to render, so it must not leave an empty page behind. */
     @Test
     void aFeatureWithNoOptionsGetsNoSection() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-        registry.feature(PROVIDER_ONLY).register();
-
+        SettingsRegistry registry = registry();
         List<SettingsSection> sections = CausticaSections.build(registry, options(registry));
 
         assertTrue(sections.stream().noneMatch(section -> section.id().equals(PROVIDER_ONLY.toString())));
@@ -64,52 +65,36 @@ final class CausticaSectionsTest {
 
     @Test
     void theHeaderBoolIsSeparatedFromTheRowsItCollapses() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-        Feature builtin = registry.features().get(BUILTIN);
+        SettingsRegistry registry = registry();
+        FeatureSettings builtin = registry.settings(BUILTIN);
+        SettingGroup effect = groupOf(CausticaSections.feature(builtin, options(registry)), "effect");
 
-        SettingsSection section = CausticaSections.feature(builtin, options(registry));
-        SettingGroup bloom = groupOf(section, "bloom");
-
-        assertNotNull(bloom.header(), "bloom.enabled is the group's header");
-        assertEquals("bloom.enabled", bloom.header().id());
-        assertTrue(bloom.rows().stream().noneMatch(row -> row.id().equals("bloom.enabled")),
-                "the header must not also appear as an ordinary row");
-        assertEquals(BloomPass.OPTIONS.size(), bloom.allControls().size());
+        assertNotNull(effect.header());
+        assertEquals("effect.enabled", effect.header().id());
+        assertEquals(List.of("effect.strength"), effect.rows().stream().map(SettingControl::id).toList());
     }
 
     @Test
     void aGroupWithNoHeaderCollapsesOnlyByCaret() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-        Feature minecraft = registry.features().get(MINECRAFT);
+        SettingsRegistry registry = new SettingsRegistry();
+        FeatureSettings feature = registry.feature(BUILTIN).group("effect").option(STRENGTH).register();
+        SettingGroup effect = groupOf(CausticaSections.feature(feature, options(registry)), "effect");
 
-        SettingGroup sky = groupOf(CausticaSections.feature(minecraft, options(registry)), "sky");
-
-        assertNull(sky.header());
-        assertTrue(sky.rowsVisible(true));
-        assertFalse(sky.rowsVisible(false));
+        assertNull(effect.header());
+        assertTrue(effect.rowsVisible(true));
+        assertFalse(effect.rowsVisible(false));
     }
 
     @Test
     void aHeaderBoolDecidesVisibilityRegardlessOfTheCaret() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-        Feature builtin = registry.features().get(BUILTIN);
-        SettingGroup bloom = groupOf(CausticaSections.feature(builtin, options(registry)), "bloom");
+        SettingsRegistry registry = registry();
+        SettingGroup effect = groupOf(
+                CausticaSections.feature(registry.settings(BUILTIN), options(registry)), "effect");
 
-        bloom.header().set(false);
-        assertFalse(bloom.rowsVisible(true));
-
-        bloom.header().set(true);
-        assertTrue(bloom.rowsVisible(false));
-    }
-
-    @Test
-    void groupsFollowTheFeaturesDeclaredOrder() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-        Feature builtin = registry.features().get(BUILTIN);
-
-        SettingsSection section = CausticaSections.feature(builtin, options(registry));
-
-        assertEquals(builtin.optionGroups(), section.groups().stream().map(SettingGroup::id).toList());
+        effect.header().set(false);
+        assertFalse(effect.rowsVisible(true));
+        effect.header().set(true);
+        assertTrue(effect.rowsVisible(false));
     }
 
     @Test
@@ -120,69 +105,38 @@ final class CausticaSectionsTest {
         List<String> ids = engine.allControls().stream().map(SettingControl::id).toList();
         assertTrue(ids.contains("composite.max-bounces"));
         assertTrue(ids.contains("hdr.enabled"));
-        assertFalse(ids.contains("worker-threads"), "a startup-only knob has no row");
-        assertFalse(ids.contains("ngx.path"), "an optional string has no row shape");
-    }
-
-    @Test
-    void everySlotBecomesItsOwnGroupOnTheCompositionSection() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-
-        SettingsSection composition = CausticaSections.composition(registry);
-
-        assertEquals(List.of("sky"),
-                composition.groups().stream().map(SettingGroup::id).toList());
-        SettingGroup sky = groupOf(composition, "sky");
-        assertEquals(List.of("caustica:sky"), sky.rows().stream().map(SettingControl::id).toList());
-
-        SettingControl.ChoiceControl<?> control = (SettingControl.ChoiceControl<?>) sky.rows().get(0);
-        assertEquals(List.of(BUILTIN, MINECRAFT), control.choices());
-        assertTrue(control.enabled(), "two registered skies are a choice the user makes");
-    }
-
-    @Test
-    void aSlotWithOneCandidateOffersNoChoiceToMake() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.rendererOnly();
-
-        SettingGroup sky = groupOf(CausticaSections.composition(registry), "sky");
-
-        SettingControl.ChoiceControl<?> control = (SettingControl.ChoiceControl<?>) sky.rows().get(0);
-        assertEquals(List.of(BUILTIN), control.choices());
-        assertFalse(control.enabled());
+        assertFalse(ids.contains("worker-threads"));
+        assertFalse(ids.contains("ngx.path"));
     }
 
     @Test
     void resettingASectionRestoresEveryDeclaredDefault() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-        Feature builtin = registry.features().get(BUILTIN);
-        SettingsSection section = CausticaSections.feature(builtin, options(registry));
+        SettingsRegistry registry = registry();
+        SettingsSection section = CausticaSections.feature(registry.settings(BUILTIN), options(registry));
         SettingControl.RangeControl strength = (SettingControl.RangeControl) section.allControls().stream()
-                .filter(row -> row.id().equals("bloom.strength")).findFirst().orElseThrow();
+                .filter(row -> row.id().equals(STRENGTH.id())).findFirst().orElseThrow();
 
-        assertFalse(section.isModified());
         strength.set(1.5);
         assertTrue(section.isModified());
-
         section.reset();
 
         assertFalse(section.isModified());
-        assertEquals(BloomPass.STRENGTH.defaultValue(), (float) strength.get());
+        assertEquals(STRENGTH.defaultValue(), (float) strength.get());
     }
 
     @Test
-    void aThirdPartyFeatureGetsAStableAccentAcrossLaunches() {
-        ResourceId featureId = ResourceId.of("someone", "else");
+    void featureAccentsAreStable() {
+        ResourceId thirdParty = ResourceId.of("someone", "else");
 
-        assertEquals(CausticaSections.accentFor(featureId), CausticaSections.accentFor(featureId));
+        assertEquals(CausticaSections.accentFor(thirdParty), CausticaSections.accentFor(thirdParty));
         assertEquals(0xFFFFB74D, CausticaSections.accentFor(BUILTIN));
     }
 
     @Test
     void anUngroupedOptionStillGetsARow() {
-        CausticaRegistry registry = dev.comfyfluffy.caustica.TestRegistries.withBuiltins();
-        ResourceId featureId = ResourceId.of("test", "loose");
-        Feature feature = registry.feature(featureId).option(Option.bool("loose", true)).register();
-
+        SettingsRegistry registry = new SettingsRegistry();
+        Option<Boolean> loose = Option.bool("loose", true);
+        FeatureSettings feature = registry.feature(ResourceId.of("test", "loose")).option(loose).register();
         SettingGroup other = groupOf(CausticaSections.feature(feature, options(registry)), "other");
 
         assertEquals(List.of("loose"), other.rows().stream().map(SettingControl::id).toList());
